--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,6 +1,6 @@
 # THIS FILE WAS AUTOMATICALLY GENERATED, PLEASE DO NOT EDIT.
 #
-# Generated on 2024-05-24T15:02:03Z by kres b5844f8.
+# Generated on 2024-05-25T14:28:32Z by kres b5844f8.
 
 name: default
 concurrency:
@@ -407,7 +407,7 @@ jobs:
         if: github.event_name == 'schedule'
         env:
           IMAGE_REGISTRY: registry.dev.siderolabs.io
-          PLATFORM: linux/amd64,linux/arm64
+          PLATFORM: linux/amd64
         run: |
           make images-essential
       - name: e2e-aws-prepare
@@ -511,6 +511,10 @@ jobs:
         if: github.event_name != 'schedule'
         run: |
           xargs -a _out/executable-artifacts -I {} chmod +x {}
+      - name: generate
+        if: github.event_name == 'schedule'
+        run: |
+          make generate
       - name: uki-certs
         if: github.event_name == 'schedule'
         env:
@@ -657,6 +661,10 @@ jobs:
         if: github.event_name != 'schedule'
         run: |
           xargs -a _out/executable-artifacts -I {} chmod +x {}
+      - name: generate
+        if: github.event_name == 'schedule'
+        run: |
+          make generate
       - name: uki-certs
         if: github.event_name == 'schedule'
         env:
@@ -1133,7 +1141,7 @@ jobs:
         if: github.event_name == 'schedule'
         env:
           IMAGE_REGISTRY: registry.dev.siderolabs.io
-          PLATFORM: linux/amd64
+          PLATFORM: linux/amd64,linux/arm64
           PUSH: "true"
         run: |
           make talosctl-linux-amd64 kernel sd-boot sd-stub initramfs installer imager talos _out/integration-test-linux-amd64
@@ -1235,6 +1243,10 @@ jobs:
         if: github.event_name != 'schedule'
         run: |
           xargs -a _out/executable-artifacts -I {} chmod +x {}
+      - name: generate
+        if: github.event_name == 'schedule'
+        run: |
+          make generate
       - name: build
         if: github.event_name == 'schedule'
         env:
@@ -2718,6 +2730,13 @@ jobs:
         if: github.event_name == 'schedule'
         run: |
           make talosctl-cni-bundle
+      - name: images-essential
+        if: github.event_name == 'schedule'
+        env:
+          IMAGE_REGISTRY: registry.dev.siderolabs.io
+          PLATFORM: linux/amd64
+        run: |
+          make images-essential
       - name: secureboot-iso
         if: github.event_name == 'schedule'
         env:
