--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -433,6 +433,11 @@ jobs:
           TF_SCRIPT_DIR: _out/contrib
         run: |
           make e2e-cloud-tf
+      - name: Setup upterm session
+        uses: lhotari/action-upterm@v1
+        with:
+          ## limits ssh access and adds the ssh public key for the user which triggered the workflow
+          limit-access-to-actor: true
       - name: e2e-aws
         run: |
           make e2e-aws
