chore: fix go.work resolution
See https://github.com/golang/go/issues/60126

The issue is that `containerd/containerd` is an indirect dependency via
a circular import from `containerd/containerd/v2` via
`microsoft/hccsim`, but in fact it's not used/built into Talos.

So explicitly exclude it, so that `go.work` flows work once again.

Signed-off-by: Andrey Smirnov <andrey.smirnov@siderolabs.com>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -100,7 +100,7 @@ linters-settings:
       - golang.zx2c4.com/wireguard
       - golang.zx2c4.com/wireguard/wgctrl
     retract-allow-no-explanation: false
-    exclude-forbidden: true
+    exclude-forbidden: false
 
 linters:
   enable-all: true
