feat: update Flannel to v0.25.3
See https://github.com/flannel-io/flannel/releases/tag/v0.25.3

Signed-off-by: Andrey Smirnov <andrey.smirnov@siderolabs.com>
(cherry picked from commit 9fcc9b84152cb186324c13e317575f6da8b7bfa6)
Signed-off-by: Noel Georgi <git@frezbo.dev>

--- a/hack/release.toml
+++ b/hack/release.toml
@@ -17,7 +17,7 @@ preface = """\
     [notes.updates]
         title = "Component Updates"
         description = """\
-Talos is built with Go 1.22.3.
+Flannel: 0.25.3
 """
 
 
