--- a/hack/test/tfvars/nvidia.yaml
+++ b/hack/test/tfvars/nvidia.yaml
@@ -5,5 +5,6 @@ machine:
       - name: nvidia_uvm
       - name: nvidia_drm
       - name: nvidia_modeset
+      - name: zfs
   sysctls:
     net.core.bpf_jit_harden: 1
