--- a/.github/workflows/slack-notify.yaml
+++ b/.github/workflows/slack-notify.yaml
@@ -1,6 +1,6 @@
 # THIS FILE WAS AUTOMATICALLY GENERATED, PLEASE DO NOT EDIT.
 #
-# Generated on 2024-05-24T15:02:03Z by kres b5844f8.
+# Generated on 2024-06-11T15:17:44Z by kres 7360563.
 
 name: slack-notify
 "on":
@@ -8,6 +8,7 @@ name: slack-notify
     workflows:
       - default
       - integration-qemu-cron
+      - integration-conformance-cron
       - integration-trusted-boot-cron
       - integration-provision-0-cron
       - integration-provision-1-cron
