--- a/hack/release.toml
+++ b/hack/release.toml
@@ -6,7 +6,7 @@ github_repo = "siderolabs/talos"
 match_deps = "^github.com/((talos-systems|siderolabs)/[a-zA-Z0-9-]+)$"
 
 # previous release
-previous = "v1.7.3"
+previous = "v1.7.4"
 
 pre_release = false
 
@@ -17,7 +17,11 @@ preface = """\
     [notes.updates]
         title = "Component Updates"
         description = """\
+Linux: 6.6.33
 Flannel: 0.25.3
+Containerd: 1.7.18
+
+Talos is built with Go 1.22.4.
 """
 
 
