docs: update opengraph image for main landing pages
Set the default image and explicitly set it for main pages.
Lint pre-rendered html for _index.html

Signed-off-by: Justin Garrison <justin.garrison@siderolabs.com>

--- a/website/config.toml
+++ b/website/config.toml
@@ -95,7 +95,7 @@ copyright = "Sidero Labs, Inc."
 # privacy_policy = "https://policies.google.com/privacy"
 
 # First one is picked as the Twitter card image if not set on page.
-# images = ["images/project-illustration.png"]
+images = ["/images/talos-dev-banner.png"]
 
 # Menu title if your navbar has a versions selector to access old versions of your site.
 # This menu appears only if you have at least one [params.versions] set.
