--- a/.github/workflows/stale.yaml
+++ b/.github/workflows/stale.yaml
@@ -20,3 +20,4 @@ jobs:
           days-before-pr-stale: 45
           days-before-issue-close: 5
           days-before-pr-close: -1 # never close PRs
+          operations-per-run: 2000 # the maximum number of operations to perform per run
