--- a/.conform.yaml
+++ b/.conform.yaml
@@ -1,6 +1,6 @@
 # THIS FILE WAS AUTOMATICALLY GENERATED, PLEASE DO NOT EDIT.
 #
-# Generated on 2024-05-02T14:45:40Z by kres fcfe226-dirty.
+# Generated on 2024-07-05T14:59:05Z by kres 8c8b007.
 
 policies:
   - type: commit
