--- a/hack/release.toml
+++ b/hack/release.toml
@@ -17,7 +17,7 @@ preface = """\
     [notes.updates]
         title = "Component Updates"
         description = """\
-Kubernetes: 1.30.2
+Kubernetes: 1.31.0-alpha.3
 Linux: 6.6.36
 containerd: 2.0.0-rc.3
 runc: 1.2.0-rc.2
@@ -85,6 +85,11 @@ Talos Linux now shows diagnostics information for common problems related to mis
 Talos Linux now support configuring 'vlan_filtering' for bridge interfaces.
 """
 
+    [notes.proxy]
+        title = "kube-proxy"
+        description = """\
+Talos Linux configures kube-proxy >= v1.31.0 to use 'nftables' backend by default.
+"""
 
 [make_deps]
 
