--- a/hack/release.toml
+++ b/hack/release.toml
@@ -17,7 +17,7 @@ preface = """\
     [notes.updates]
         title = "Component Updates"
         description = """\
-Kubernetes: 1.31.0-alpha.3
+Kubernetes: 1.31.0-beta0
 Linux: 6.6.36
 containerd: 2.0.0-rc.3
 runc: 1.2.0-rc.2
