--- a/hack/release.toml
+++ b/hack/release.toml
@@ -17,10 +17,12 @@ preface = """\
     [notes.updates]
         title = "Component Updates"
         description = """\
-* Linux: 6.1.82
-* Kubernetes: 1.29.3
+* Linux: 6.1.100
+* Kubernetes: 1.29.7
+* runc: 1.1.13
+* containerd: 1.7.20
 
-Talos is built with Go 1.21.8.
+Talos is built with Go 1.21.12.
 """
 
 [make_deps]
