fix: generate kubeconfig using proper types
Generating YAML using text templates is going to stop working because of
proper escaping.

Also fix unrelated issue with `cloud.google.com/go` module which got
split into submodules, and now this conflicts with each other.

Fixes #7180

Signed-off-by: Andrey Smirnov <andrey.smirnov@siderolabs.com>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -104,6 +104,7 @@ linters-settings:
       - github.com/mdlayher/kobject
       - golang.zx2c4.com/wireguard
       - golang.zx2c4.com/wireguard/wgctrl
+      - cloud.google.com/go
     retract-allow-no-explanation: false
     exclude-forbidden: false
 
